# whisper_diarization

whisper-transcription/: pyproject.toml
whisper-transcription/data/: output.txt
whisper-transcription/whisper_transcription/: transcribe_diarize.py
