[tool.poetry]
name = "whisper-transcription"
version = "0.1.0"
description = ""
authors = ["pp115 <priyampatel115@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
whisper = "^1.1.10"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
